# GameProg-OO

./: .gitignore  DiagramaJogoModelo.uml  LICENSE  README.md  README.txt
assets/: Shrek-all.psd
assets/level1/: Background.psd  Background_01.pngs  Background_02.pngs  level1_tilset.tsx
extra/: DIAGRAMA-JOGO.mdj  Modelo_Especificacao_para_Trabalho_TecnicasProgramacao.docx  Modelo_para_Trabalho_TecnicasProgramacao.docx  comandos.txt
lib/JSON/cmake/: nlohmann_json-config.cmake
map/: Castle.json  Castle.tmx  CastleExample.txt  ExtraLevel.json  ExtraLevel.tmx  MedievalRuins.json  MedievalRuins.tmx  level1.json  level1.tmx  level1_tileset.tsx
savedGame/: highScore.json  savedCastleLevel.json  savedGame.json  savedMedievalRuinsLevel.json
src/: CMakeLists.txt  Entity.cpp  Entity.hpp  OtherGrandRandomOgre.cpp  OtherGrandRandomOgre.hpp  Personagem.cpp  Personagem.hpp  Principal.cpp  Principal.hpp  State.cpp  State.hpp  Teste.cpp  Teste.hpp  main.cpp
src/Entities/: Character.cpp  Character.hpp
src/Levels/: Background.cpp  Background.hpp  Castle.cpp  Castle.hpp  Level.cpp  Level.hpp  MedievalRuins.cpp  MedievalRuins.hpp
src/Lists/: List.hpp  ListCharacters.cpp  ListCharacters.hpp  PhysicalEntityList.cpp  PhysicalEntityList.hpp  listPersonagens.hpp
src/Managers/: ButtonsManager.cpp  ButtonsManager.hpp  CollisionManager.cpp  CollisionManager.hpp  EventsManager.cpp  EventsManager.hpp  GraphicManager.cpp  GraphicManager.hpp  ScreenManager.cpp  ScreenManager.hpp  StateManager.cpp  StateManager.hpp
src/Mementos/: LevelMemento.cpp  LevelMemento.hpp  Memento.cpp  Memento.hpp
src/Menus/: Button.cpp  Button.hpp  MainMenu.cpp  MainMenu.hpp  Menu.cpp  Menu.hpp  PauseMenu.cpp  PauseMenu.hpp  PromisseText.cpp  PromisseText.hpp  Ranking.cpp  Ranking.hpp  RankingInsert.cpp  RankingInsert.hpp  TextInputBox.cpp  TextInputBox.hpp
src/MultiplesThreads/: ExtraLevel.cpp  ExtraLevel.hpp  ThreadWitch.cpp  ThreadWitch.hpp  Threads.cpp  Threads.hpp
src/PhysicalEntities/: PhysicalEntity.cpp  PhysicalEntity.hpp
src/PhysicalEntities/Characters/: Character.cpp  Character.hpp
src/PhysicalEntities/Characters/Enemies/: Dragon.cpp  Dragon.hpp  Enemy.cpp  Enemy.hpp  Witch.cpp  Witch.hpp  Wolf.cpp  Wolf.hpp
src/PhysicalEntities/Characters/Players/: Donkey.cpp  Donkey.hpp  Player.cpp  Player.hpp  Shrek.cpp  Shrek.hpp
src/PhysicalEntities/Obstacles/: Obstacle.hpp
src/PhysicalEntities/Projectiles/: Apple.cpp  Apple.hpp  Fire.cpp  Fire.hpp  Projectile.cpp  Projectile.hpp
src/Tiles/: Tile.cpp  Tile.hpp  TileMap.cpp  TileMap.hpp  TilesManager.cpp  TilesManager.hpp
src/Utilities/: Clock.cpp  Clock.hpp  Color.cpp  Color.hpp  RandomGenerator.cpp  RandomGenerator.hpp  Vector2D.hpp  Vector2DMethods.hpp
